force-app/main/default/objects/Tax_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalId>true</externalId>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>