force-app/main/default/objects/Tax_Group__c/fields/Refresh_Tax_Groups__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Tax_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, apex will queue up a batch process to refresh all of the tax groups from Timberline.  This value should be updated via a button somewhere in the UI</description>
    <inlineHelpText>When checked, a request will be queued up to refresh ALL Tax Group data (not just for this record).  You will only need to check this box once to refresh all Tax Groups.</inlineHelpText>
    <label>Refresh Tax Groups</label>
    <type>Checkbox</type>
</CustomField>