force-app/main/default/objects/Tax_Group__c/fields/Tax1Name__c.field-meta.xml
<CustomField>
    <fullName>Tax1Name__c</fullName>
    <label>Tax 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>