force-app/main/default/objects/Tax_Group__c/fields/Tax2Name__c.field-meta.xml
<CustomField>
    <fullName>Tax2Name__c</fullName>
    <label>Tax 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>