force-app/main/default/objects/Tax_Group__c/fields/Tax3Name__c.field-meta.xml
<CustomField>
    <fullName>Tax3Name__c</fullName>
    <label>Tax 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>