force-app/main/default/objects/Tax_Group__c/fields/Tax4Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax4Rate__c</fullName>
    <label>Tax 4 Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>