force-app/main/default/objects/Tax_Group__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>