force-app/main/default/objects/Tax_Group__c/fields/Timberline_Id__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Id__c</fullName>
    <externalId>true</externalId>
    <label>Timberline Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>